加工需要的数据，修改进入页面时，视频的加载时间函数
Change-Id: Ib128bed709643b2ea20dd4d2f4dd6d07454efba3

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             this.getVideo('video');
             this.userAgent();
             this.evenInitialize();
+            this.processData();
         }
     });
 
@@ -23,7 +24,7 @@
         },false);
     };
 
-    eventTester("timeupdate"); //播放时间改变
+    //eventTester("timeupdate"); //播放时间改变
 
 
     /*eventTester("loadstart"); //客户端开始请求数据
