--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
     };
 
     //eventTester("timeupdate"); //播放时间改变
-
-
-    /*eventTester("loadstart"); //客户端开始请求数据
-    //eventTester("progress"); //客户端正在请求数据
+    eventTester("emptied"); //当目前的播放列表为空时
+    eventTester("loadstart"); //客户端开始请求数据
+    eventTester("progress"); //客户端正在请求数据
     eventTester("abort"); //客户端主动终止下载（不是因为错误引起）
     eventTester("loadstart"); //客户端开始请求数据
     eventTester("suspend"); //延迟下载
@@ -44,11 +43,11 @@
     eventTester("canplaythrough"); //可以播放，歌曲全部加载完毕
     eventTester("seeking"); //寻找中
     eventTester("seeked"); //寻找完毕
-
     eventTester("ended"); //播放结束
     eventTester("ratechange"); //播放速率改变
     eventTester("durationchange"); //资源长度改变
-    eventTester("volumechange"); //音量改变*/
+    eventTester("volumechange"); //音量改变
+    eventTester("ended"); //当目前的播放列表已结束时
 </script>
 </body>
 </html>
