卡顿次数统计
Change-Id: I0a6cd664d99403374c32c95fd548e52852736775

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <script>
     var getVideoInfo = new GetVideoInfo({
         initialize: function () {
+            this.createUID();
             this.getVideo('video');
             this.userAgent();
             this.evenInitialize();
@@ -39,7 +40,7 @@
     //eventTester("timeupdate"); //播放时间改变
     eventTester("emptied"); //当目前的播放列表为空时
     eventTester("loadstart"); //客户端开始请求数据
-    eventTester("progress"); //客户端正在请求数据
+    //eventTester("progress"); //客户端正在请求数据
     eventTester("abort"); //客户端主动终止下载（不是因为错误引起）
     eventTester("loadstart"); //客户端开始请求数据
     eventTester("suspend"); //延迟下载
