--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             n: '',  //视频名称(VideoName)
             ch: '',  //视频频道(VideoTVChannel)
             wch: '', // 网络频道(VideoWebChannel)
-            tg: '', //标签
-            cdn: '' //cdn信息
+            tg: '66666', //标签
+            cdn: '900' //cdn信息
         }
     });
 
