现在可配置URL和轮询时长了
Change-Id: Ib476b636b2784635f13b79eacb543a69dbf4a0b6

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <script src="collection.js"></script>
 <script>
     var getVideoInfo = new GetVideoInfo({
+        url: 'http://tracker.otvcloud.com/t.gif',
+        pollingTimes: 10,
         initialize: function () {
             this.getVideo('video');
             this.userAgent();
