--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     </script>
 </head>
 <body>
-<video src="video/LoveMore.mp4" width="500" height="350" controls="controls"></video>
+<video src="http://ceshi-219.chinacloudapp.cn:8082/LoveMore.mp4" width="500" height="350" controls="controls"></video>
 <script src="collection.js"></script> <!-- 替换成线上地址 -->
 <script>
     var getVideoInfo = new GetVideoInfo({
-        pollingTimes: 10,  //轮询时长
+        pollingTimes: 20,  //轮询时长
         initialize: function () {
             this.getVideo('video');
             this.userAgent();
@@ -21,14 +21,14 @@
         //默认参数
         models:{
             appid: 1,  //应用ID (应用ID)
-            cmd: '',  //播放类型(直播、点播)
-            vid: '',  //业务系统中的视频ID(vedioId)
-            von: '',  //视频原始名称(VideoOriginalName)
-            n: '',  //视频名称(VideoName)
-            ch: '',  //视频频道(VideoTVChannel)
-            wch: '', // 网络频道(VideoWebChannel)
-            tg: '66666', //标签
-            cdn: '900' //cdn信息
+            cmd: '2',  //播放类型(直播、点播)
+            vid: '3',  //业务系统中的视频ID(vedioId)
+            von: '4',  //视频原始名称(VideoOriginalName)
+            n: '5',  //视频名称(VideoName)
+            ch: '6',  //视频频道(VideoTVChannel)
+            wch: '7', // 网络频道(VideoWebChannel)
+            tg: '8', //标签
+            cdn: '9' //cdn信息
         }
     });
 
