--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <video src="http://ceshi-219.chinacloudapp.cn:8082/LoveMore.mp4" width="500" height="350" controls="controls"></video>
 <button>切换视频</button>
-<script src="collection.js"></script> <!-- 替换成线上地址 -->
+<script src="http://tracker.otvcloud.com/collection.min.js"></script> <!-- 替换成线上地址 -->
 <script>
     var getVideoInfo = new GetVideoInfo({
         pollingTimes: 5,  //轮询时长
@@ -18,7 +18,7 @@
         models: {
             appid: 'xxxxxx',  //应用ID (应用ID,在接入前，需要由OTVCLOUD分配)
             cmd: 'lvpl',  //播放类型(直播:lvpl、点播: vopl)
-            vid: 'CPRG0000000000002596',  //业务系统中的视频ID(content_id)
+            vd: 'CPRG0000000000002596',  //业务系统中的视频ID(content_id)
             von: '弃子的艺术2',  //视频原始名称
             n: '弃子的艺术2',  //视频名称：可与von一样
             ch: '围棋天元',  //视频频道
