增加版本号字段
Change-Id: I99e9c29ea514957c41b74d005c6c5fd4860334c4

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 <video src="http://ceshi-219.chinacloudapp.cn:8082/LoveMore.mp4" width="500" height="350" controls="controls"></video>
 <button>切换视频</button>
-<script src="http://tracker.otvcloud.com/collection.min.js"></script> <!-- 替换成线上地址 -->
+<script src="collection.min.js"></script> <!-- 替换成线上地址 -->
 <script>
     var getVideoInfo = new GetVideoInfo({
-        pollingTimes: 5,  //轮询时长
+        pollingTimes: 10,  //轮询时长
         //默认参数
         models: {
             appid: 'xxxxxx',  //应用ID (应用ID,在接入前，需要由OTVCLOUD分配)
