--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 <video src="http://ceshi-219.chinacloudapp.cn:8082/LoveMore.mp4" width="500" height="350" controls="controls"></video>
 <button>切换视频</button>
-<script src="collection.min.js"></script> <!-- 替换成线上地址 -->
+<script src="collection.js"></script> <!-- 替换成线上地址 -->
 <script>
     var getVideoInfo = new GetVideoInfo({
-        pollingTimes: 10,  //轮询时长
+        pollingTimes: 5,  //轮询时长
         //默认参数
         models: {
             appid: 'xxxxxx',  //应用ID (应用ID,在接入前，需要由OTVCLOUD分配)
@@ -61,7 +61,36 @@
     document.getElementsByTagName('button')[0].onclick = function (e) {
         getVideoInfo.models.vid = 'fanxiaolong';
         console.log(getVideoInfo);
+    };
+
+    var b = getTime();
+
+    function getTime() {
+        return Date.now();
     }
+
+    document.addEventListener('webkitvisibilitychange', function () {
+
+        if (document.webkitVisibilityState == 'hidden') {
+            b = getTime();
+
+        } else {
+            document.body.appendChild(document.createTextNode('间隔:' + (getTime() - b)))
+
+        }
+
+    })
+    document.addEventListener('mozvisibilitychange', function () {
+
+        if (document.mozVisibilityState == 'hidden') {
+            b = getTime();
+
+        } else {
+            document.body.appendChild(document.createTextNode('间隔:' + (getTime() - b)))
+
+        }
+
+    })
 </script>
 </body>
 </html>
